--- a/electronGUI/baas-front/package.json
+++ b/electronGUI/baas-front/package.json
@@ -20,10 +20,12 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
-    "electron-updater": "^6.1.7"
+    "electron-updater": "^6.1.7",
+    "vuetify": "^3.6.5"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.1",
+    "@mdi/font": "^7.4.47",
     "@rushstack/eslint-patch": "^1.6.1",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/eslint-config-prettier": "^9.0.0",
