--- a/electron_gui/package.json
+++ b/electron_gui/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
+    "@types/node": "^20.12.13",
     "axios": "^1.6.8",
     "electron-updater": "^6.1.7",
+    "pinia": "^2.1.7",
     "vue-router": "^4.3.2",
     "vuetify": "^3.6.5"
   },
